# aoc-2020

1/: Cargo.toml
2/: Cargo.toml
3/: Cargo.toml
4/: Cargo.toml
5/: Cargo.toml
7/: main.py
inputs/: 19
python/: 1.py  10.py  (+9 more)
rust/: .gitignore  Cargo.toml  run_all  test_all
rust/1/src/: main.rs
rust/2/src/: main.rs
rust/3/src/: main.rs
rust/4/src/: main.rs
rust/5/src/: main.rs
rust/6/src/: main.rs
rust/7/: Cargo.toml
rust/src/: day1.rs  day11.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs  solutions.rs
rust/src/day12/: mod.rs  types.rs
rust/src/day16/: input.rs  mod.rs
rust/src/day17/: mod.rs  point.rs
rust/src/solutions/: day1.rs  day11.rs  day13.rs  day14.rs  day15.rs  day18.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs
rust/src/solutions/day12/: mod.rs  types.rs
rust/src/solutions/day16/: input.rs  mod.rs
rust/src/solutions/day17/: mod.rs
rust/src/solutions/day19/: dag.rs  input.rs  mod.rs  nfa.rs  pattern.rs
rust/src/solutions/day19/dag/: parse.rs
rust/src/solutions/day19/nfa/: new_nfa.rs
rust/src/solutions/day19/pattern/: compute_accepted.rs  new.rs
rust/src/solutions/day20/: OLD.rs  graph.rs  image.rs  input.rs  mod.rs  tile.rs
rust/src/solutions/day20/tile/: border.rs
rust/src/solutions/day21/: input.rs  mod.rs
rust/src/solutions/day22/: input.rs  mod.rs
rust/src/solutions/day23/: input.rs  mod.rs
rust/src/solutions/day24/: dir.rs  input.rs  mod.rs  part_1.rs  part_2.rs  point.rs
rust/src/solutions/day25/: input.rs  mod.rs
(+6 files in other folders)
