[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Kevan Hollbach <khollbach@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3"
